feat: added frontend ui for locations and inventory
