# modules/api/src/routes/inventory/dto/update-inventory.dto.ts
@@ -49,7 +49,7 @@ export class UpdateInventoryDto {
   @IsOptional()
   @IsString()
   @MaxLength(100)
-  batch_number?: string;
+  batchNumber?: string;
 
   @ApiProperty({
     description: 'Expiry date',
